--- a/public/about.html
+++ b/public/about.html
@@ -9,11 +9,9 @@
   <title>Nodejs</title>
 </head>
 <body>
-  <h1 class="text-info"> Nodejs Project </h1>
-  <a href="about.html">About Page</a>
+  <h1 class="text-info"> About </h1>
+  <a href="index.html">Home page</a>
   <a href="contact.html">Contact Page</a>
-
-
 
   <!-- <script src="../node_modules/jquery/dist/jquery.min.js">  </script>
   <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js">  </script>
