--- a/public/contact.html
+++ b/public/contact.html
@@ -10,10 +10,20 @@
 </head>
 <body>
   <h1 class="text-info"> Nodejs Project </h1>
+  <a href="index.html">Home page</a>
   <a href="about.html">About Page</a>
-  <a href="contact.html">Contact Page</a>
 
+  <br>
+  <br>
 
+  <form class="form" action="index.html" method="post">
+    <label for="name">Name</label>
+    <input type="text" name="name" value="">
+    <br>
+    <br>
+    <label for="surname">Surname</label>
+    <input type="text" name="surname" value="">
+  </form>
 
   <!-- <script src="../node_modules/jquery/dist/jquery.min.js">  </script>
   <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js">  </script>
